[package]
name = "bytetable"
version = "1.0.5"
edition = "2021"
rust-version = "1.91"
license = "MIT"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
description = "High-performance data structures indexed by u8"
repository = "https://github.com/jnbooth/bytetable"
readme = "README.md"
keywords = ["no-std", "array", "set", "table"]
categories = ["data-structures", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["alloc"]
alloc = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
must_use_candidate = "allow"
partialeq_ne_impl = "allow"
