[package]
name = "bytetable"
version = "1.0.8"
edition = "2021"
rust-version = "1.91"
license = "MIT"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
description = "High-performance data structures indexed by u8"
repository = "https://github.com/jnbooth/bytetable"
readme = "README.md"
keywords = ["no-std", "array", "set", "table"]
categories = ["data-structures", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["alloc"]
alloc = []

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.rustdoc]
unescaped_backticks = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
decimal_bitwise_operands = "allow"
inline_always = "allow"
must_use_candidate = "allow"
partialeq_ne_impl = "allow"
string_slice = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
